# cmakevcpkgcafexperience

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  vcpkg-configuration.json  vcpkg.json
src/: main.cpp
